--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
